<resources>
    <string name="app_name">ShopEZ</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="category">Categories</string>
    <string name="search_products_btn">Search</string>
    <string name="search_by_name">Search Product</string>
    <string name="nav_open_drawer">Open Navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="image_description">Product image</string>
    <string name="add_to_cart_btn">Add to Cart</string>
    <string name="home_page_title">Homepage</string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="about_title">About us</string>
    <string name="support_title">Support</string>
    <string name="faq_title">Frequently Asked Questions (FAQ)</string>
    <string name="feedback_title">Send Us Feedback!</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome_text">Welcome to Your Favourite Price Comparison App!</string>
    <string name="vendor_logo">Vendor Logo</string>
    <string name="delete_btn">Delete</string>
    <string name="nav_view_cart">View cart</string>
    <string name="cart_activity_title">My Cart</string>
    <string name="filter_hint">Select Filters</string>
    <string name="question_1">Which stores are prices compared?</string>
    <string name="question_1_title">Question 1</string>
    <string name="question_2_title">Question 2</string>
    <string name="question_3_title">Question 3</string>
    <string name="charlie_picture_description">Charlie\'s Picture</string>
    <string name="charlie_wei">Charlie Wei</string>
    <string name="job_title">Senior Web Designer</string>
    <string name="charlie_quotes">There’s no shortage of remarkable ideas,
        what’s missing is the will to execute them.</string>
    <string name="xavier_picture_description">Xavier\'s Picture</string>
    <string name="xavier_nguyen">Xavier Nguyen</string>
    <string name="job_title_2">Senior Web Developer</string>
    <string name="xavier_quotes">Imagination is everything. It is the preview
        of life’s coming attractions.</string>
    <string name="nav_background_description">Electronic background for navigation menu</string>
    <string name="question_2">Can ShopEZ be used outside of Canada?</string>
    <string name="question_3">Is there a limit on the number items that can be added to my cart?</string>
</resources>