<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CDA412"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="73dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="60sp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColorHint="#aaaa9a"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColorHint="#aaaa9a"/>

    <Button
        android:id="@+id/products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Products"
        android:layout_gravity="center"
        android:onClick="products_activity_on_click"/>
</LinearLayout>